examples and docs improvements