@@ -38,4 +38,5 @@ $JAVA_CMD -Xmx1g -Xms1g \
 --add-opens java.base/jdk.internal.misc=ALL-UNNAMED \
 --add-opens java.base/java.lang.reflect=ALL-UNNAMED \
 --add-opens java.base/sun.nio.ch=ALL-UNNAMED \
+--add-opens java.base/java.nio.channels.spi=ALL-UNNAMED \
 -jar "$BOOT_JAR" $@
